@@ -1,3 +1,8 @@
+2010-03-26  Nick Roberts  <nickrob@snap.net.nz>
+
+	* progmodes/gdb-ui.el (gdb-apple-test): New function.
+	(gdb-init-1): Use it.
+
 2010-02-10  Dan Nicolaescu  <dann@ics.uci.edu>
 
 	* vc.el (vc-root-diff): Doc fix.
